minor bug fixes

--- a/patchguard_notebook.ipynb
+++ b/patchguard_notebook.ipynb
@@ -882,18 +882,18 @@
     "                img_count += 1\n",
     "                                \n",
     "        for img_path in os.listdir(self.path_normal):\n",
-    "            image_dir = os.path.join(self.path_normal, img_path)\n",
     "            foreground_mask_dir = os.path.join(self.foreground_mask_path, img_path)\n",
     "            if not os.path.exists(foreground_mask_dir):\n",
-    "                self.normal_test.append(image_dir)\n",
+    "                self.normal_test.append(img_path)\n",
     "                img_count -= 1\n",
-    "                                \n",
+    "\n",
     "        if split == 'train':\n",
     "            for img_path in os.listdir(self.path_normal):\n",
-    "                image_dir = (os.path.join(self.path_normal, img_path))\n",
-    "                if image_dir not in self.normal_test:\n",
+    "                image_dir = os.path.join(self.path_normal, img_path)\n",
+    "                if img_path not in self.normal_test:\n",
     "                    foreground_mask_dir = os.path.join(self.foreground_mask_path, img_path)\n",
     "                    self.data.append((image_dir, None, foreground_mask_dir))\n",
+    "\n",
     "        elif split == 'test':\n",
     "            for img_path in self.normal_test:\n",
     "                self.data.append((os.path.join(self.path_normal, img_path), None, None)) \n",
@@ -903,7 +903,7 @@
     "                mask_dir = image_dir.replace(\"Images\", \"Masks\")[:-3] + \"png\"\n",
     "                self.data.append((image_dir, mask_dir, None)) \n",
     "\n",
-    "            random.shuffle(self.data)            \n",
+    "            random.shuffle(self.data)          \n",
     "\n",
     "    def __len__(self):\n",
     "        return len(self.data)\n",
